--- a/AngularFormsWithAspMvc/AngularFormsWithAspMvc.csproj
+++ b/AngularFormsWithAspMvc/AngularFormsWithAspMvc.csproj
@@ -134,7 +134,7 @@
     <Content Include="app\AngularFormsApp.js" />
     <Content Include="app\EmployeeForm\efController.js" />
     <Content Include="app\EmployeeForm\efDirective.js" />
-    <Content Include="app\EmployeeForm\efService.js" />
+    <Content Include="app\DataService.js" />
     <Content Include="app\EmployeeForm\efTemplate.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
