--- a/AngularFormsWithAspMvc/AngularFormsWithAspMvc.csproj
+++ b/AngularFormsWithAspMvc/AngularFormsWithAspMvc.csproj
@@ -110,6 +110,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\Home.html" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.js" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap-tpls.min.js" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap.js" />
+    <Content Include="Scripts\angular-ui\ui-bootstrap.min.js" />
     <Content Include="Scripts\version.json" />
     <Content Include="Scripts\errors.json" />
     <Content Include="Scripts\angular-touch.min.js.map" />
